<resources>
    <string name="app_name">DiCard</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Registered already? Sign in from here</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password should be at least 4 characters</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_number">10 digit Phone Number</string>
    <string name="sign_in_button">Sign In</string>
    <string name="error_invalid_field">Please enter valid details</string>
    <string name="error_invalid_number">Please enter valid 10 digit number</string>
    <string name="facebook_app_id">1868868356680168</string>
    <string name="sign_out">Sign out</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_fmt">Signed in as %s</string>
</resources>
